# aws_lambda_events_extended

./: Cargo.toml  README.md
src/: dynamodb.rs  eventbridge.rs  lib.rs
src/fixtures/: example-dynamo-stream-event.json  example-event-bridge-event.json
