[package]
name = "aws_lambda_events_extended"
version = "0.1.0"
authors = ["Charles Ede <charlieede01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = { version = "0.5", features = ["serde"] }
