[package]
name = "aws_lambda_events_extended"
version = "0.1.0"
authors = ["Charles Ede"]
edition = "2018"
description = "Extra aws lambda strong structs"
readme = "README.md"
license = "MIT"
keywords = ["aws", "lambda", "dynamodb", "stream", "events", "extended"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = { version = "0.5", features = ["serde"] }
